--- a/homework/javaweb/experiment_1/main.css
+++ b/homework/javaweb/experiment_1/main.css
@@ -1,14 +1,30 @@
 body {
     margin: 0% 10%;
-    padding: 0;
-    background-color: #fff;
     color: #333;
+    /* background-color: #d50000;
+    background-image: url("../image/background.jpg");
+    background-size: 80% auto;
+    background-position: center;
+    background-repeat: no-repeat; */
+    /* position: relative;  */
+    padding-bottom: 60px;
 }
-header, footer {
+header {
     background-color: #dc3545;
     color: #fff;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px;
+}
+footer {
+    background-color: #dc3545;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4%;
 }
 nav {
     text-align: center;
@@ -21,12 +37,64 @@ section {
 img {
     max-width: 50%;
     height: auto;
-    margin-bottom: 10px;
+    margin: 0% 25%
 }
 a {
     color: black;
     text-decoration: none;
     font-weight: bold;
+}
+p {
+    text-indent: 35px;
+}
+@media (max-width: 768px) {
+    .index-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+@media (min-width: 769px) {
+    .index-container {
+        display: flex;
+    }
+}
+.introduce {
+    margin: 10px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    transition: all 3s ease;
+}
+.introduce:hover {
+    transform: rotateZ(-360deg) translateY(300px) rotateX(90deg);
+}
+.custom {
+    margin: 10px 0;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    text-align: left;
+    float: left;
+    transition: all 3s ease;
+}
+.custom:hover {
+    transform: skew(30deg,30deg) rotateZ(360deg);
+}
+.local {
+    margin: 10px 0;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    text-align: left;
+    float: left;
+    transition: all 3s ease;
+}
+.local:hover {
+    transform: scaleX(2) scaleY(2) rotateZ(30deg);
 }
 .card-container {
     display: flex;
@@ -38,16 +106,15 @@ a {
     flex: 0 1 calc(33.33% - 20px);
     margin: 10px;
     padding: 20px;
-    background-color: #f8f9fa;
+    background-color: #ffe1e1;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     text-align: center;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease;
 }
-
 .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    transform: translateY(-15px);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
 }
 
 .card h3 {
@@ -55,8 +122,46 @@ a {
     margin-bottom: 10px;
     color: #dc3545;
 }
-
 .card p {
     font-size: 14px;
     line-height: 1.6;
+}
+.list {
+    margin: 10px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transition: all 3s ease;
+}
+@media (max-width: 768px) {
+    .list-container {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .list {
+        margin: 10px auto;
+        transition: all 3s ease;
+    }
+}
+@media (min-width: 769px) {
+    .list-container {
+        writing-mode: tb-rl;
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .list {
+        margin: 5px 5%;
+        transition: all 1s ease;
+    }
+}
+.list:hover {
+    transform: rotateY(45deg);
+}
+.list h3 {
+    font-size: 18px;
+    color: #dc3545;
+}
+.list p {
+    font-size: 14px;
 }
